# algorithm

4/: CMakeLists.txt
4/src/: 4.1-1-majority.cpp  4.1-1-majority.h  4.2-2-moving-avg.cpp  4.2-2-moving-avg.h  4.5-3-sort.cpp  4.5-3-sort.h  4.6-4-maxsum.cpp  4.6-4-maxsum.h
4/test/: test-4.cpp
5/: CMakeLists.txt
5/src/: 5.2-1-binsearch.cpp  5.2-1-binsearch.h  5.2-2-insertion-sort.cpp  5.2-2-insertion-sort.h
5/test/: test-5.cpp
6/: CMakeLists.txt
6/src/: 6.10-6-permutation.cpp  6.2-1-pick.cpp  6.2-1-pick.h  6.2-2-boggle.cpp  6.2-2-boggle.h  6.3-3-picnic.cpp  6.3-3-picnic.h  6.5-4-boardcover.cpp  6.5-4-boardcover.h  6.8-5-clocksync.cpp  6.8-5-clocksync.h
6/test/: test-6.cpp
7/: CMakeLists.txt
7/src/: 7.1-1-karatsuba.cpp  7.1-1-karatsuba.h  7.2-2-quadtree.cpp  7.2-2-quadtree.h  7.4-3-fence.cpp  7.4-3-fence.h
7/test/: test-7.cpp
